generics-ize our open-ssl impl internals for less (compiler) warnings